Fix Copilot Annotations
